# meridian-flow

./: .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  GEMINI.md  Makefile  PRODUCT.md  README.md  biome.json  go.work  go.work.sum  lefthook.yml  mars.toml  meridian.toml  nx.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  report.md  tsconfig.base.json  vitest.config.mts  vitest.db.config.mts
.claude/: settings.json
.context/: CONTEXT.md  architecture.md  draft-review.md
.cursor/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
.meridian/: .gitignore  agents.toml  id  models.toml
.superdesign/: design-system.md
_docs/: AGENTS.md  IMPLEMENTATION_SUMMARY.md
backend/: .env.example  .env.production.example  .env.test.example  AGENTS.md  CLAUDE.md  ENVIRONMENTS.md  Makefile  QUICKSTART.md  README.md  go.mod  go.sum
cli/: README.md  pyproject.toml
cli/meridian_cli/: __init__.py  api_client.py  app.py  app.tcss  models.py  navigation.py
cli/meridian_cli/screens/: __init__.py  project_list.py  thread_list.py  turn_browser.py
docs/: debugging.md
frontend/: .env.example  .prettierignore  AGENTS.md  CLAUDE.md  README.md  components.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
frontend-v2/: AGENTS.md  CLAUDE.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
orchestrator/: agent.go  go.mod  main.go  orchestrator.go  render.go  rotate.go  (+9 more)
(+4661 files in other folders)
